# yudu-chat-ui

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.codex/agents/: design-ui-designer.toml  design-ux-researcher.toml  engineering-backend-architect.toml  engineering-code-reviewer.toml  engineering-frontend-developer.toml  testing-api-tester.toml
apps/desktop/: package.json
apps/desktop/scripts/: bundle-server.mjs
apps/desktop/src/: index.html  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/server/: .env.example  package.json  tsconfig.json
apps/server/src/: data-dir.ts  index.ts
apps/server/src/agents/: coder.json  general.json  index.ts  researcher.json  reviewer.json
apps/server/src/db/: index.ts  schema.ts
apps/server/src/providers/: anthropic.ts  images.ts  mock.ts  openai-compatible.ts  registry.ts  remote.ts  types.ts
apps/server/src/routes/: agents.ts  chat.ts  conversations.ts  images.ts  providers.ts  settings.ts  skills.ts  uploads.ts  usage.ts
apps/server/src/skills/: import-file.ts  index.ts
apps/server/test/: chat.test.ts  data-permissions.test.ts  images.test.ts  providers.test.ts  settings.test.ts  skill-import.test.ts  skills.test.ts  tools.test.ts  uploads.test.ts
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
(+47 files in other folders)
