[package]
name = "yudu-chat-desktop"
version = "0.1.0"
description = "Yudu Chat desktop shell (Tauri)"
authors = ["yudu"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "yudu_chat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-single-instance = "2.0"
getrandom = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
once_cell = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
